# grocery-store

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: Dockerfile  requirements.txt
backend/api/: urls.py
backend/api/v1/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/store/: admin.py  models.py
backend/store/migrations/: 0001_initial.py  0002_alter_shoppingcart_count.py
backend/user/: models.py
backend/user/migrations/: 0001_initial.py
infra/: .env.example  docker-compose.infra.yml  docker-compose.local.yml
infra/nginx/: default.conf
